--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,44 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Merriweather", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     margin: 0;
     padding: 0;
-    background: linear-gradient(to right, rgb(155, 155, 155), rgb(176, 221, 247)); 
+    background: linear-gradient(to right, rgb(75, 74, 74), rgb(143, 143, 143)); 
+    color: rgba(255, 255, 255, 0.835);
+} 
+
+html{
+    scroll-behavior: smooth;
+}
+
+p{
+    font-size: 20px;
+    margin-bottom: 40px;
+}
+
+h2{
+    text-align: center;
+    border-radius: 18px;
+    border-left: 18px solid white;
+    padding: 15px 0;
+    background-color: #333;
+    margin-bottom: 40px;
+    box-shadow: 0 2px 8px rgba(255, 255, 255, 0.835);
+}
+
+figcaption{
+    font-family: Arial, Helvetica, sans-serif; color: rgb(213, 213, 213);
+}
+
+h3{
+    text-align: center;
+    text-decoration: underline;
+    font-size: 22px;
 }
 
 header {
+    margin: 0;
     background-color: #333;
 }
 
@@ -36,7 +69,36 @@ header {
     background-color: #555; 
 }
 
-.carousel {
+#contenedor{
+    display: flex;
+    justify-content: flex-start;
+    margin: 20px 0 0 300px;
+}
+
+#contenido{
+    max-width: 900px;
+}
+
+#indice{
+    display: flex;
+    justify-content: flex-end;
+    margin-left: 200px;
+    padding-right: 20px;
+    height: 280px;
+    border: 2px solid #333;
+    border-radius: 20px;
+    background-color: #333;
+    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.809);
+}
+
+#indice li{
+ padding: 10px;
+}
+
+.listas li{
+    font-size: 18px;
+}
+.carrousel {
     position: relative;
     max-width: 600px;
     margin: 20px auto;
@@ -49,8 +111,7 @@ header {
 }
 
 .carousel-image {
-    
-     
+        
      min-width: 100%; 
      height: 400px; 
      object-fit: cover; 
@@ -78,4 +139,13 @@ header {
 
 .next {
     right: 10px;
+}
+
+a{
+    text-decoration: none;
+}
+
+a:hover, a:visited, a:active, a:focus{
+    color: white;
+    text-decoration: none;
 }
