--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 /******************************************** GENERAL *******************************************/
+html{
+    scroll-behavior: smooth;
+}
 
 body {
     font-family: "Merriweather", sans-serif;
@@ -10,144 +13,13 @@ body {
     color: rgba(255, 255, 255, 0.835);
 } 
 
-.seleccionado{
-    padding-bottom: 3px;
-    border-bottom:2px solid white;
-}
-
-header {
-    margin: 0;
-    background-color: #333;
-}
-
-.navbar {
-    display: flex;
-    justify-content: center; /* Centrar el menú */
-}
-
-.nav-list {
-    list-style: none;
-    padding: 0;
-    display: flex; /* Usar Flexbox */
-}
-
-.nav-list li {
-    margin: 0 15px; /* Espaciado entre elementos */
-}
-
-.nav-list a {
-    color: white;
-    text-decoration: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-}
-
-.nav-list a:hover {
-    background-color: #555; 
-}
-
-/******************************************** PAGINA INICIO *****************************************/
-
-html{
-    scroll-behavior: smooth;
-}
-
-#contenedorInicio{
-    display: flex;
-    justify-content: flex-start;
-    margin: 20px 0 0 15%;
-}
-
-#contenedorInicio p{  
-    font-size: 20px;
-    margin-bottom: 40px;
-}
-
-
-
-#contenidoInicio{
-    max-width: 900px;
-}
-
-#indice{
-    display: flex;
-    justify-content: flex-end;
-    margin-left: 200px;
-    padding-right: 20px;
-    height: 280px;
-    border: 2px solid #333;
-    border-radius: 20px;
-    background-color: #333;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.809);
-}
-
-#indice li{
- padding: 10px;
-}
-
-#indice a{
-    text-decoration: none;
-}
-
-#indice a:hover, a:visited, a:active, a:focus{
-    color: white;
-    text-decoration: none;
-}
-
-.listas li{
-    font-size: 18px;
-}
-
-figcaption{
-    font-family: Arial, Helvetica, sans-serif; color: rgb(213, 213, 213);
-}
-
-.carrousel {
-    position: relative;
-    max-width: 800px;
-    margin: 20px auto;
-    overflow: hidden; 
-}
-
-.carousel-images {
-    display: flex; 
-    transition: transform 0.5s ease; 
-}
-
-.carousel-image {
-        
-     min-width: 100%; 
-     height: 500px; 
-     object-fit: cover; 
-     display: none; 
-     filter: grayscale(100%);
-}
-
-.carousel-image:hover {
-    filter: grayscale(0%); /* Restablece el color al pasar el mouse */
-}
-.carousel-image.active {
-    display: block; 
-}
-
-.carousel-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(255, 255, 255, 0.8);
-    border: none;
+#barraLateral{
+    font-size: 30px;
     cursor: pointer;
-    padding: 10px;
-    z-index: 10; 
-}
-
-.prev {
-    left: 10px;
-}
-
-.next {
-    right: 10px;
+    position: fixed;
+    left: 0;
+    background-color: black;
+    padding: 7px;
 }
 
 .sidenav {
@@ -224,6 +96,88 @@ figcaption{
 
 .dropdown:hover .dropdown-content {
     display: block;
+}
+
+/******************************************** PAGINA INICIO *****************************************/
+
+
+#contenedorInicio{
+    display: flex;
+    justify-content: flex-start;
+    margin: 20px 0 0 20%;
+}
+
+#contenedorInicio p{  
+    font-size: 20px;
+    margin-bottom: 40px;
+}
+
+
+#contenidoInicio{
+    max-width: 900px;
+}
+
+.listas li{
+    font-size: 18px;
+}
+
+figure{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+figure img{
+    margin-bottom: 10px;
+}
+figcaption{
+    font-family: Arial, Helvetica, sans-serif; color: rgb(213, 213, 213);
+}
+
+.carrousel {
+    position: relative;
+    max-width: 800px;
+    margin: 20px auto;
+    overflow: hidden; 
+}
+
+.carousel-images {
+    display: flex; 
+    transition: transform 0.5s ease; 
+}
+
+.carousel-image {
+        
+     min-width: 100%; 
+     height: 500px; 
+     object-fit: cover; 
+     display: none; 
+     filter: grayscale(100%);
+}
+
+.carousel-image:hover {
+    filter: grayscale(0%); /* Restablece el color al pasar el mouse */
+}
+.carousel-image.active {
+    display: block; 
+}
+
+.carousel-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(255, 255, 255, 0.8);
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    z-index: 10; 
+}
+
+.prev {
+    left: 10px;
+}
+
+.next {
+    right: 10px;
 }
 
 /********************************** PAGINA CONTACTO ********************************************/
