--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,7 @@ figcaption {
 
 .carousel-images {
     display: flex;
-    transition: transform 0.5s ease;
+    transition: transform 0.5s ease-in-out;
 }
 
 .carousel-image {
