--- a/styles.css
+++ b/styles.css
@@ -429,3 +429,29 @@ h1 {
     color: white;
     /* Cambia el color según tu diseño */
 }
+
+.auto{
+    display: flex;
+    margin-left: 12px;
+    gap: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+}
+
+.auto h2{
+    text-align: center;
+}
+
+.imagenes-autos{
+    width: 1000px;
+    height: 580px;
+}
+
+fieldset{
+    border-radius: 15px;
+    width: 890px;
+}
+
+b{
+    color: rgb(0, 0, 0);
+}
